syntax = "proto3";

package cow.environment.v1;
option java_package = "network.cow.environment.protocol.v1";
option java_multiple_files = true;

message AudioStartedEvent {
    string consumer_id = 1;
    string id = 2;
}

message AudioStoppedEvent {
    string consumer_id = 1;
    string id = 2;
}
